# franzininho-c0

./: .gitignore  .gitmodules
.github/workflows/: exemplo-16-testes.yml
03-exemplo-hello-world/: CMakeLists.txt  Readme.md
03-exemplo-hello-world/Lib/: CMakeLists.txt
03-exemplo-hello-world/Lib/include/device/: gpio_pin.h  led.h
03-exemplo-hello-world/Lib/src/device/: gpio_pin.c  led.c
03-exemplo-hello-world/test/: CMakeLists.txt
03-exemplo-hello-world/test/src/: test1.cpp
03-exemplo-hello-world/test/src/device/: ut_gpio_pin.cpp  ut_led.cpp
03-exemplo-hello-world/test/src/mock/: mock_hal_gpio.c
16-testes/: .cproject  .gitignore  .mxproject  .project  16-testes.ioc  CMakeLists.txt  Readme.md
16-testes/Core/Inc/: main.h
16-testes/Core/Src/: gpio.c  main.c  stm32c0xx_hal_msp.c  usart.c
16-testes/Lib/: CMakeLists.txt
16-testes/Lib/Inc/device/: gpio_pin.h
16-testes/Lib/Src/device/: gpio_pin.c
16-testes/Test/: CMakeLists.txt
16-testes/Test/Src/: ut_basic.cpp
16-testes/Test/Src/device/: ut_gpio_pin.cpp
16-testes/Test/Src/mock/: mock_hal_gpio.c
